--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "mongoose": "^5.4.20",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
-    "string-similarity": "^3.0.0"
+    "redis": "^2.8.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "string-similarity": "^3.0.0",
+    "to-zalgo": "^1.0.1"
   }
 }
